# Boid

./: CMakeLists.txt  README.txt  main.cpp  myProgram
src/: boid.cpp  boid.hpp  generateBoids.cpp  generateBoids.hpp  param.hpp
